# EnginePractice

./: .gitignore  CMakeLists.txt  README.md
CazenoveEngine/: CMakeLists.txt
CazenoveEngine/CazenoveCore/: CMakeLists.txt
CazenoveEngine/CazenoveCore/src/graphics/: window.cpp  window.h
CazenoveEngine/CazenoveCore/src/maths/: vector.cpp  vector.h
CazenoveEngine/sample/: CMakeLists.txt  main.cpp
